@@ -40,7 +40,15 @@ class Config {
 
       return instance.GetConfig();
     } catch (e) {
-      console.error(`${'[ERROR]'.error} LoadConfig : ${e.message}`);
+      if (process.env.env && process.env.env !== '') {
+        console.error(`${'[ERROR]'.error} LoadConfig : ${e.message}`);
+      } else {
+        console.error(
+          `${
+            '[WARN]'.warn
+          } No Configuration loaded, you might want to specify --env=<filename> where the filename is one of the ./.yadu/ file.`,
+        );
+      }
       return null;
     }
   }
