@@ -25,10 +25,13 @@ function parseJson(content, mapping = {}) {
   // End of line, we received the actual value
   if (content && (typeof content === 'string' || typeof content === 'number')) {
     if (typeof content === 'string') {
+      logDebug(mapping);
       Object.keys(mapping).forEach((mappingKey) => {
+        logDebug(`Processing mappingKey : ${mappingKey}`);
         content = content.replace(mappingKey, mapping[mappingKey]);
       });
     }
+    logDebug(`content: ${content}`);
     return content;
   }
 
