@@ -3,10 +3,10 @@ const { logVerbose, isHome, logDebug } = require('../globals/utils');
 const Cloudformation = require('./classes/Cloudformation');
 
 module.exports = (args, config) => {
-  console.log('> Cloudformation Merging Tool');
   if (!args.cloudformation) {
     return false;
   }
+  console.log('> Cloudformation Merging Tool');
   if (!args.filename) {
     throw new Error('Missing --filename');
   }
